--- a/rsyslog.master.conf
+++ b/rsyslog.master.conf
@@ -7,6 +7,7 @@ module(load="imtcp" MaxSessions="500")
 
 ruleset(name="simplefile") {
   action(type="omfile" dirCreateMode="0777" FileCreateMode="0644" File="/home/tradesparq/sirius/simplefile.log")
+#  action(type="ommail" ActionMailSMTPServer="127.0.0.1" ActionMailSMTPPort="25" ActionMailFrom="rsyslog@example.com" ActionMailTo="operator@example.com" )
 }
 
 input(type="imtcp" port="10514" ruleset="simplefile")
