--- a/rsyslog.slave.conf
+++ b/rsyslog.slave.conf
@@ -14,13 +14,25 @@ ruleset(name="simplefile") {
 }
 
 input(type="imfile"
-      File="/var/log/tsq/out-0.log"
+      File="/var/log/tsq/out.log"
       Tag="tsq.out"
       StateFile="tsq.out"
       ruleset="simplefwd")
 
 input(type="imfile"
-      File="/var/log/tsq/error-0.log"
+      File="/var/log/tsq/err.log"
       Tag="tsq.error"
       StateFile="tsq.error"
+      ruleset="simplefwd")
+
+input(type="imfile"
+      File="/var/log/tsq/urlworker-out.log"
+      Tag="tsq.out"
+      StateFile="tsq.urlworker.out"
+      ruleset="simplefwd")
+
+input(type="imfile"
+      File="/var/log/tsq/urlworker-err.log"
+      Tag="tsq.error"
+      StateFile="tsq.urlworker.error"
       ruleset="simplefwd")
